App navigation shows current and past games in separate lists. Moved new game and logout links into dedicated floating actions section at bottom of nav so they didn't get bumped when the games list gets long. Fixed issues with overflow scrolling when app is displaying the nav

--- a/app/assets/stylesheets/config/config.css.sass
+++ b/app/assets/stylesheets/config/config.css.sass
@@ -2,6 +2,7 @@ $header-height: 50px
 $header-height-phone: 50px
 $nav-width-phone: 200px
 $nav-height: 40px
+$nav-actions-height-phone: 60px
 
 $primary-bg-color: #fff
 $secondary-bg-color: #eee
@@ -15,3 +16,5 @@ $info-color: lighten($primary-color, 20)
 $light-grey: #eee
 $dark-grey: #666
 $border-radius: 3px
+
+$nav-bg-color-phone: #222
