--- a/app/assets/stylesheets/layouts/main.css.sass
+++ b/app/assets/stylesheets/layouts/main.css.sass
@@ -7,6 +7,7 @@
   bottom: 0
   left: 0
   right: 0
+  overflow: hidden
 
 #main-wrapper
   width: 100%
@@ -57,6 +58,8 @@ ul.horizontal
     bottom: 0
     left: 0
     width: 100% //set as fixed on mobiles on load
+    overflow: scroll
+    background: $primary-bg-color
     @include transition(all, 0.2s)
     &.navigation-visible
       left: 80%
